--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,4 @@
 /CMCS.Test/CMCS.DataTester/bin/CMCS.DapperDber.dll
 /CMCS.Test/CMCS.DataTester/bin/CMCS.Common.pdb
 /CMCS.Test/CMCS.DataTester/bin/CMCS.Common.dll
+/CMCS.Hardware
