--- a/.gitignore
+++ b/.gitignore
@@ -206,3 +206,55 @@
 /CMCS.Test/CMCS.DataTester/bin/CMCS.Common.pdb
 /CMCS.Test/CMCS.DataTester/bin/CMCS.Common.dll
 /CMCS.Hardware
+/CMCS.CarTransport/CMCS.CarTransport.LED/bin/LED.Listen.pdb
+/CMCS.CarTransport/CMCS.CarTransport.LED/bin/LED.Listen.dll
+/CMCS.CarTransport/CMCS.CarTransport.LED/bin/CMCS.Forms.UserControls.pdb
+/CMCS.CarTransport/CMCS.CarTransport.LED/bin/CMCS.Forms.UserControls.dll
+/CMCS.CarTransport/CMCS.CarTransport.LED/bin/CMCS.DotNetBar.Utilities.pdb
+/CMCS.CarTransport/CMCS.CarTransport.LED/bin/CMCS.DotNetBar.Utilities.dll
+/CMCS.CarTransport/CMCS.CarTransport.LED/bin/CMCS.DapperDber.pdb
+/CMCS.CarTransport/CMCS.CarTransport.LED/bin/CMCS.DapperDber.dll
+/CMCS.CarTransport/CMCS.CarTransport.LED/bin/CMCS.Common.pdb
+/CMCS.CarTransport/CMCS.CarTransport.LED/bin/CMCS.Common.dll
+/CMCS.CarTransport/CMCS.CarTransport.LED/bin/CMCS.CarTransport.dll
+/CMCS.CarTransport/CMCS.CarTransport.Queue/bin/RW.HawkvorCom.pdb
+/CMCS.CarTransport/CMCS.CarTransport.Queue/bin/RW.HawkvorCom.dll
+/CMCS.CarTransport/CMCS.CarTransport.Queue/bin/LED.Listen.pdb
+/CMCS.CarTransport/CMCS.CarTransport.Queue/bin/LED.Listen.dll
+/CMCS.CarTransport/CMCS.CarTransport.Queue/bin/CMCS.Forms.UserControls.pdb
+/CMCS.CarTransport/CMCS.CarTransport.Queue/bin/CMCS.Forms.UserControls.dll
+/CMCS.CarTransport/CMCS.CarTransport.VideoWeighter/bin/HikVisionSDK.Core.pdb
+/CMCS.CarTransport/CMCS.CarTransport.VideoWeighter/bin/HikVisionSDK.Core.dll
+/CMCS.CarTransport/CMCS.CarTransport.VideoWeighter/bin/CMCS.Forms.UserControls.pdb
+/CMCS.CarTransport/CMCS.CarTransport.VideoWeighter/bin/CMCS.Forms.UserControls.dll
+/CMCS.CarTransport/CMCS.CarTransport.VideoWeighter/bin/CMCS.DotNetBar.Utilities.pdb
+/CMCS.CarTransport/CMCS.CarTransport.VideoWeighter/bin/CMCS.DotNetBar.Utilities.dll
+/CMCS.CarTransport/CMCS.CarTransport.Weighter/bin/WB.TOLEDO.YAOHUA.pdb
+/CMCS.CarTransport/CMCS.CarTransport.Weighter/bin/WB.TOLEDO.YAOHUA.dll
+/CMCS.CarTransport/CMCS.CarTransport.Weighter/bin/RW.Hawkvor.pdb
+/CMCS.CarTransport/CMCS.CarTransport.Weighter/bin/RW.Hawkvor.dll
+/CMCS.CarTransport/CMCS.CarTransport.Weighter/bin/LED.YIBO.pdb
+/CMCS.CarTransport/CMCS.CarTransport.Weighter/bin/LED.YIBO.dll
+/CMCS.CarTransport/CMCS.CarTransport.Weighter/bin/LED.Listen.pdb
+/CMCS.CarTransport/CMCS.CarTransport.Weighter/bin/LED.Listen.dll
+/CMCS.CarTransport/CMCS.CarTransport.Weighter/bin/IOC.PCI1761.pdb
+/CMCS.CarTransport/CMCS.CarTransport.Weighter/bin/IOC.PCI1761.dll
+/CMCS.CarTransport/CMCS.CarTransport.Weighter/bin/HikVisionSDK.Core.pdb
+/CMCS.CarTransport/CMCS.CarTransport.Weighter/bin/HikVisionSDK.Core.dll
+/CMCS.CarTransport/CMCS.CarTransport.Weighter/bin/CMCS.Forms.UserControls.pdb
+/CMCS.CarTransport/CMCS.CarTransport.Weighter/bin/CMCS.Forms.UserControls.dll
+/CMCS.CarTransport/CMCS.CarTransport.Weighter/bin/CMCS.DotNetBar.Utilities.pdb
+/CMCS.CarTransport/CMCS.CarTransport.Weighter/bin/CMCS.DotNetBar.Utilities.dll
+/CMCS.Test/CMCS.DataTester/bin/WB.TOLEDO.YAOHUA.pdb
+/CMCS.Test/CMCS.DataTester/bin/WB.TOLEDO.YAOHUA.dll
+/CMCS.Test/CMCS.DataTester/bin/RW.HawkvorCom.pdb
+/CMCS.Test/CMCS.DataTester/bin/RW.HawkvorCom.dll
+/CMCS.Test/CMCS.DataTester/bin/RW.Hawkvor.pdb
+/CMCS.Test/CMCS.DataTester/bin/RW.Hawkvor.dll
+/CMCS.Test/CMCS.DataTester/bin/LED.YIBO.pdb
+/CMCS.Test/CMCS.DataTester/bin/LED.YIBO.dll
+/CMCS.Test/CMCS.DataTester/bin/IOC.PCI1761.pdb
+/CMCS.Test/CMCS.DataTester/bin/IOC.PCI1761.dll
+/CMCS.Test/CMCS.DataTester/bin/HikVisionSDK.Core.pdb
+/CMCS.Test/CMCS.DataTester/bin/HikVisionSDK.Core.dll
+/CMCS.Test/CMCS.DataTester/obj/x86/Debug
